--- a/style.css
+++ b/style.css
@@ -6,3 +6,29 @@
 .b{
     background-color: yellow;
 }
+
+@font-face {
+    font-family: own;
+    src: url(SpaceGrotesk-VariableFont_wght.ttf);
+}
+
+.font{
+    font-family: own;
+    font-size: 100px;
+    font-weight: 100;
+    letter-spacing: 32px;
+    text-align: center;
+
+}
+
+.box{
+    width: 90%;
+    height: 100px;
+    background-color: violet;
+    overflow: scroll;
+    padding: 50px;
+    box-sizing: border-box;
+    margin: auto;
+    display: block;
+}
+
