--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.a{
+/* .a{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: aqua;
 }
@@ -30,5 +30,55 @@
     box-sizing: border-box;
     margin: auto;
     display: block;
+} */
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
 
+.navbar{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+}
+.nav1{
+    width: 24%;
+    height: 100%;
+}
+.nav1>img{
+    width: 100%;
+    margin-top: -50px;
+}
+.nav2{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.navigation{
+    padding: 10px;
+    height: 25px;
+    width: 100px;
+    text-align: center;
+    border-radius: 3px;
+    background-color: #f90c90;
+    color: white;
+    
+}
+.navigation>a{
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+}
+.navigation:hover{
+    background-color: #a21c7f;
+}
+
+.nav3{
+    width: 24%;
+    height: 100%;
+}
